Alignment issues fixed

--- a/app/src/views/stylesheets/index.styl
+++ b/app/src/views/stylesheets/index.styl
@@ -441,16 +441,16 @@ body
 						padding-left 0
 						list-style-type none
 						counter-reset section
-						& > li
-							// display table-row
-							&:before
-								// display table-cell
-								text-align right
-								counter-increment section
-								content counters(section, ".")
-								padding-right .5em
-								font-size .7em
-								color grey
+					li
+						display table-row
+						&:before
+							display table-cell
+							text-align right
+							counter-increment section
+							content counters(section, ".")
+							padding-right .5em
+							font-size .7em
+							color grey
 					.task, .tag
 						input
 							border-radius 5px
